fix: Pogs with no wrapping title

--- a/sass/elements/_pog.scss
+++ b/sass/elements/_pog.scss
@@ -40,6 +40,7 @@ $pog_width: 150px;
     .heading {
       font-weight: bold;
       margin-top: 10px;
+      white-space: nowrap;
     }
 
     .context {
